# MangaCollector

./: .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json
.github/workflows/: docker-images.yaml.yml
client/: Dockerfile  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  qodana.yml  tailwind.config.js  vite.config.js
client/src/: App.jsx  SettingsContext.js  main.jsx
client/src/assets/: beastars.avif  berserk.avif  firepunch.avif  punpun.avif  tokyoghoul.avif  vinland.avif
client/src/components/: About.jsx  ActivityFeed.jsx  AddCoffretModal.jsx  AddPage.jsx  AddUpcomingVolumeModal.jsx  ArchiveSection.jsx  AtmosphereSection.jsx  AuthorPage.jsx  AvatarPicker.jsx  BacklogPage.jsx  BarcodeScanner.jsx  BirthdayModeSection.jsx  BulkActionsBar.jsx  CalendarPage.jsx  CalendarSubscribeModal.jsx  CoffretGroup.jsx  CollectionPage.jsx  CommandPalette.jsx  ComparePage.jsx  CoverPickerModal.jsx  Dashboard.jsx  DefaultBackground.jsx  DeleteAccountFlow.jsx  FriendsPage.jsx  GapSuggestions.jsx  GlossaryPage.jsx  Header.jsx  ImportExternalPage.jsx  InstallPrompt.jsx  LoanModal.jsx  LoansWidget.jsx  Login.jsx  MalRecommendationModal.jsx  MalRecommendations.jsx  Manga.jsx  MangaDetails.jsx  MangaPage.jsx  MangaPageSkeleton.jsx  MangaSearchBar.jsx  MangaSearchResults.jsx  (+34 more)
client/src/hooks/: useActiveLoans.js  useActivity.js  useArchive.js  useAtmosphere.js  useAuth.js  useAuthProvider.js  useAuthorDetail.js  useAvatarChoices.js  useBacklog.js  useCoffrets.js  useCollection.js  useCompare.js  useCoverPool.js  useCoverPreviewGesture.js  useDebouncedLiveQuery.js  useDebouncedValue.js  useExtendedAnalytics.js  useExternalImport.js  useFocusTrap.js  useFriends.js  useFriendsOverlap.js  useGapSuggestions.js  useGlobalShortcuts.js  useKnownAuthors.js  useKnownPublishers.js  useKnownStores.js  useLatest.js  useLazyImage.js  (+22 more)
docs/: TIMELINE.md  release-calendar-proxy.fr.md  release-calendar-proxy.md
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  app.js  knexfile.js  migrate.js  package-lock.json  package.json  qodana.yml
server-rust/: .env.example  Dockerfile
server-rust/migrations/: 20251012111306_add_genres.sql  20251012214941_add_settings.sql  20251026213239_add_setting_titles.sql  20251031125945_change_setting_sac.sql  20260419120000_add_setting_theme.sql  20260419140000_add_setting_language.sql  20260419180000_timestamps_to_tz.sql
server-rust/src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  state.rs  storage.rs
server/.cargo/: config.toml
server/config/: passport.js
server/controllers/: libraryController.js  settingController.js  storageController.js  userController.js  volumeController.js
server/db/: db.js  libraryQueries.js  now-helper.js  pool.js  userQueries.js  volumeQueries.js
server/db/migrations/: 20251009122652_initial.js  20251012111306_add-genres.js  20251012114614_add-show-adult-content.js  20251012114614_add-show-adult-images.js  20251012214941_add-settings.js  20251026213239_add-setting-titles.js  20251031125945_change-setting-sac.js
server/db/models/: setting.js  user.js  user_librarie.js  user_volume.js
server/lib/: mal-api.js  migrate_template.js  price.js  titleType.js
server/migrations/: 20251009122652_initial.sql  20251009122653_sessions.sql  20251012114614_add_show_adult_content.sql  20251031125945_change_setting_sac.sql  20260419160000_add_activity_log.sql  20260419200000_add_setting_avatar.sql  20260420000000_add_volume_collector.sql  20260420120000_add_coffrets.sql  20260421170000_add_mangadex_id.sql  20260423120000_add_user_seals.sql  20260423121000_add_volume_read_at.sql  20260424120000_add_user_public_slug.sql  20260424140000_add_user_public_show_adult.sql  20260424160000_unique_library_volumes.sql  20260424170000_activity_log_cascade.sql  20260425200000_add_library_publisher_edition.sql  20260425220000_add_wishlist_public_until.sql  20260426100000_add_user_session_meta.sql  20260426150000_drop_session_meta_fk.sql  20260426160000_drop_legacy_tower_sessions.sql  20260426170000_session_meta_listing_index.sql  20260427100000_add_volume_release.sql  20260427120000_add_user_calendar_token.sql  20260428000000_add_volume_notes.sql  20260430000000_add_setting_sound.sql  20260501100000_add_setting_accent.sql  20260501110000_add_setting_shelf_3d.sql  20260502100000_add_library_review.sql  20260502120000_add_library_author.sql  20260503100000_add_authors_table.sql  20260503110000_authors_user_scope.sql  20260503120000_authors_normalize.sql  20260504120000_add_volume_loan_tracker.sql  20260505120000_create_user_snapshots.sql  20260506120000_create_user_follows.sql  20260507120000_add_setting_ink_trail.sql
server/models/: libraryModel.js  userModel.js  volumeModel.js
server/routes/: apiRouter.js  authRouter.js  libraryRouter.js  settingRouter.js  storageRouter.js  userRouter.js  volumeRouter.js
server/services/: library.js  settings.js  storage.js  users.js  volumes.js
server/src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  observability.rs  state.rs  storage.rs
server/src/handlers/: activity.rs  archive.rs  auth.rs  author.rs  calendar.rs  coffret.rs  compare.rs  external.rs  external_import.rs  follow.rs  health.rs  library.rs  mod.rs  public.rs  public_config.rs  realtime.rs  seals.rs  settings.rs  snapshot.rs  storage.rs  user_profile.rs  volume.rs
server/src/models/: archive.rs  author.rs  coffret.rs  compare.rs  follow.rs  library.rs  mod.rs  session_meta.rs  setting.rs  snapshot.rs  user.rs  user_seal.rs  volume.rs
server/src/routes/: api.rs  auth.rs
server/src/services/: activity.rs  activity_coalescer.rs  archive.rs  author.rs  cache.rs  calendar_ics.rs  coffret.rs  compare.rs  cover_pool.rs  external.rs  external_import.rs  follow.rs  genres.rs  google_books_api.rs  jobs.rs  library.rs  mal_api.rs  mangadex_api.rs  mod.rs  proxy_client.rs  realtime.rs  releases.rs  seals.rs  sessions.rs  sessions_cleanup.rs  settings.rs  snapshot.rs  users.rs  volume.rs
server/src/util/: image.rs  mod.rs  url.rs  uuid.rs
(+106 files in other folders)
