[package]
name = "manga-collector-server"
version = "2.6.0"
edition = "2024"

[[bin]]
name = "manga-collector-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "macros", "ws"] }
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }

# Async runtime — narrow feature selection instead of "full".
# "full" pulls in tokio's entire feature set including features we
# don't use (e.g. `process`). The list below matches what an Axum
# server actually touches: multi-thread rt, macros (`#[tokio::main]`),
# TCP net, I/O utilities (ReadBuf etc.), time (sleep/timeout), sync
# primitives (channels/broadcast), fs (LocalStorage backend), signal
# (graceful shutdown hooks if we add them later).
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "sync",
    "fs",
    "signal",
] }

# Sessions — tower-sessions-sqlx-store 0.15 still depends on
# tower-sessions-core 0.14 (verified 2026-04 in the lockfile). Pinning
# tower-sessions to 0.14 keeps the trait impls aligned; bumping to
# 0.15 breaks SessionStore because PostgresStore is built against
# core 0.14. Re-evaluate once the sqlx-store crate ships a 0.16.
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-rust_decimal"] }

# OAuth / OIDC
openidconnect = { version = "4", features = ["reqwest"] }

# HTTP client (MAL API, OIDC)
#
# `default-features = false` + `rustls-tls` drops the native-tls /
# OpenSSL transitive chain entirely. Prior state (default features)
# pulled `openssl 0.10.x` and `openssl-sys`, each carrying a rotating
# collection of RUSTSEC advisories (PSK/cookie OOB read, Deriver
# buffer overflows, PEM password callback OOB, AES key-wrap bounds,
# MdCtxRef::digest_final buffer overrun — five open at audit time).
# Every outbound request in the app (MAL, MangaDex, AniList, OIDC
# discovery, Google Books) now goes through the rustls stack that
# sqlx and the aws SDK already link, so there's no second TLS
# implementation to ship or audit.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "http2",
    "charset",
    "macos-system-configuration",
] }

# S3 / MinIO
# `default-features = false` drops the `rustls` feature alias, which
# under the hood enables `aws-smithy-http-client/legacy-rustls-ring` —
# that's the OLD `rustls 0.21` + `rustls-webpki 0.101.x` path. The
# replacement `default-https-client` feature (kept below) already
# provides a modern `rustls 0.23` + `rustls-webpki 0.103.x` stack via
# aws-lc-rs. Net effect: RUSTSEC-2024-0436 (rustls-webpki panic) and
# GHSA-3drh-mv85-qj73 (webpki wildcard name-constraint) can't hit us
# because the vulnerable `0.101.x` ladder never gets compiled in.
aws-sdk-s3 = { version = "1.129", default-features = false, features = [
    "sigv4a",
    "http-1x",
    "default-https-client",
    "rt-tokio",
] }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Decimal for price
rust_decimal = { version = "1.41", features = ["serde-with-str"] }

# Environment config
dotenvy = "0.15"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait (still needed for our own StorageBackend trait)
async-trait = "0.1"

# Bytes / futures
bytes = "1"
futures = "0.3"

# HTTP types
http = "1"

# URL building
url = "2"

# Redis cache (optional — disabled at runtime if REDIS_URL is unset)
redis = { version = "1.2", features = ["tokio-comp"] }
deadpool-redis = "0.23"
# Relax from "1.4.0" exact pin to semver-minor so patch releases (bug
# fixes, perf tweaks) flow in. The exact pin had no original
# justification; a specific reproducible version isn't needed for
# CSV parsing.
csv = "1"

# Rate limiting — tower-governor wraps the `governor` crate as a tower
# middleware. We use IP-based buckets by default; operators behind a
# reverse proxy (Traefik/Nginx) must ensure the correct X-Forwarded-For
# handling upstream so buckets are per-client, not per-proxy.
tower_governor = "0.7"

[profile.release]
opt-level = 3
# "thin" LTO gets ~95% of the perf of full LTO for ~40% of the link time.
# codegen-units = 16 (the cargo default for release) lets the compiler
# parallelise codegen across cores — huge win with a 200+ crate dep graph.
lto = "thin"
codegen-units = 16
